--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -808,6 +808,12 @@ select::-ms-expand {
 }
 
 footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  padding: 1rem;
+  text-align: center;
     background: black;
     color: white;
     text-align: center;
